// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Badge examples snapshots DefaultBadgeComponent should render correctly 1`] = `
<div>
  <span
    class="v-badge v-badge-default"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots LongNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    class="v-badge v-badge-default v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    12345
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeIconNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-clear v-badge-critical v-badge-icon"
    icon=""
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-error-alt v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-error-alt-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 13C8.55228 13 9 13.4477 9 14C9 14.5523 8.55228 15 8 15C7.44772 15 7 14.5523 7 14C7 13.4477 7.44772 13 8 13ZM9 11H7V1H9V11Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeIconOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-critical v-badge-icon"
    icon=""
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-error-alt v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-error-alt-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 13C8.55228 13 9 13.4477 9 14C9 14.5523 8.55228 15 8 15C7.44772 15 7 14.5523 7 14C7 13.4477 7.44772 13 8 13ZM9 11H7V1H9V11Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeLabelOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-critical"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-clear v-badge-critical"
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-critical v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeNumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="negative"
    class="v-badge v-badge-clear v-badge-critical v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots NegativeWithEllipseBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="negative"
    class="v-badge v-badge-critical"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots NegativeWithIconBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="negative"
    class="v-badge v-badge-critical"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-error v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      style="--v-icon-primary: var(--v-badge-error-icon-color); --v-icon-secondary: var(--v-badge-error-icon-color);"
      v-icon-visa-error-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
      />
      <path
        class="v-icon-primary"
        d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots NeutralIconNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="neutral"
    class="v-badge v-badge-clear v-badge-icon v-badge-neutral"
    icon=""
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-information-alt v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-information-alt-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9 13H10V15H6V13H7V7H6V5H9V13ZM9 3H7V1H9V3Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots NeutralIconOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="neutral"
    class="v-badge v-badge-icon v-badge-neutral"
    icon=""
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-information-alt v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-information-alt-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9 13H10V15H6V13H7V7H6V5H9V13ZM9 3H7V1H9V3Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots NeutralLabelOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="neutral"
    class="v-badge v-badge-neutral"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots NeutralNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="neutral"
    class="v-badge v-badge-neutral v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots NeutralNumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="neutral"
    class="v-badge v-badge-clear v-badge-neutral v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots NeutralWithEllipseBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="neutral"
    class="v-badge v-badge-neutral"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots NeutralWithIconBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="neutral"
    class="v-badge v-badge-neutral"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-information v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-information-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM6 7V9H7V11H6V13H10V11H9V7H6ZM7 3V5H9V3H7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots NumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    class="v-badge v-badge-default v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots NumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    class="v-badge v-badge-clear v-badge-default v-badge-number v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots StableIconNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-clear v-badge-icon v-badge-stable"
    icon=""
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-checkmark v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-checkmark-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M15.7441 3.43896L5.03711 14.146L0.330078 9.43896L1.74414 8.0249L5.03711 11.3179L14.3301 2.0249L15.7441 3.43896Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots StableIconOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-icon v-badge-stable"
    icon=""
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-checkmark v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-checkmark-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M15.7441 3.43896L5.03711 14.146L0.330078 9.43896L1.74414 8.0249L5.03711 11.3179L14.3301 2.0249L15.7441 3.43896Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots StableLabelOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-stable"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots StableNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-clear v-badge-stable"
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots StableNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-number v-badge-stable v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots StableNumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="stable"
    class="v-badge v-badge-clear v-badge-number v-badge-stable v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots StableWithEllipseBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="stable"
    class="v-badge v-badge-stable"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots StableWithIconBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="stable"
    class="v-badge v-badge-stable"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-success v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      style="--v-icon-primary: var(--v-badge-stable-icon-color); --v-icon-secondary: var(--v-badge-stable-icon-color);"
      v-icon-visa-success-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <path
        class="v-icon-primary"
        d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
      />
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots SubtleIconNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-clear v-badge-icon v-badge-subtle"
    icon=""
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleIconOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-icon v-badge-subtle"
    icon=""
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleLabelOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-subtle"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-clear v-badge-subtle"
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-number v-badge-subtle v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleNumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="subtle"
    class="v-badge v-badge-clear v-badge-number v-badge-subtle v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots SubtleWithEllipseBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="subtle"
    class="v-badge v-badge-subtle"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots SubtleWithIconBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="subtle"
    class="v-badge v-badge-subtle"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots WarningIconNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-clear v-badge-icon v-badge-warning"
    icon=""
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-icon-visa v-icon-warning"
      focusable="false"
      height="16"
      style="--v-icon-primary: var(--v-badge-warning-icon-color); --v-icon-secondary: var(--v-badge-warning-icon-color);"
      v-icon-visa-warning-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots WarningIconOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-icon v-badge-warning"
    icon=""
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-icon-visa v-icon-warning"
      focusable="false"
      height="16"
      style="--v-icon-primary: var(--v-badge-foreground); --v-icon-secondary: var(--v-badge-foreground);"
      v-icon-visa-warning-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Badge examples snapshots WarningLabelOnlyBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-warning"
    id="a-v-badge-0"
    v-badge=""
  >
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots WarningNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-clear v-badge-warning"
    id="a-v-badge-0"
    nobackground=""
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
     Label 
  </span>
</div>
`;

exports[`Badge examples snapshots WarningNumberBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-number v-badge-warning v-typography-label-active"
    id="a-v-badge-0"
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots WarningNumberNoBackgroundBadgeComponent should render correctly 1`] = `
<div>
  <span
    badgetype="warning"
    class="v-badge v-badge-clear v-badge-number v-badge-warning v-typography-label-active"
    id="a-v-badge-0"
    nobackground=""
    number=""
    v-badge=""
    vtypography="label-active"
  >
    3
  </span>
</div>
`;

exports[`Badge examples snapshots WarningWithEllipseBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="warning"
    class="v-badge v-badge-warning"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      class="v-icon v-badge-ellipse v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      hidden="true"
      iconSize="tiny"
      isBadgeEllipse=""
      style="--v-icon-height: var(--size-scalable-8); --v-icon-primary: var(--v-badge-ellipse-color); --v-icon-secondary: var(--v-badge-ellipse-color); --v-icon-width: var(--size-scalable-8);"
      v-icon=""
      viewBox="0 0 16 16"
      width="16"
    >
      
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
      
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Badge examples snapshots WarningWithIconBadgeComponent should render correctly 1`] = `
<div>
  <div
    badgetype="warning"
    class="v-badge v-badge-warning"
    id="a-v-badge-0"
    v-badge=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-icon-visa v-icon-warning"
      focusable="false"
      height="16"
      style="--v-icon-primary: var(--v-badge-warning-icon-color); --v-icon-secondary: var(--v-badge-warning-icon-color);"
      v-icon-visa-warning-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
    <span>
      Label
    </span>
  </div>
</div>
`;
